[gd_scene load_steps=5 format=3 uid="uid://ctssotmjor72a"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_1psxw"]
[ext_resource type="Texture2D" uid="uid://qqhyrfydt520" path="res://assets/back.png" id="1_c0w3g"]

[sub_resource type="SystemFont" id="SystemFont_tyadq"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_x7u3j"]
font_names = PackedStringArray("Impact")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1psxw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c0w3g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_tyadq")
theme_override_font_sizes/font_size = 60
text = "Pixel Crawler"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Hero_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_x7u3j")
theme_override_font_sizes/font_size = 30
text = "Hero"

[node name="Knight_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_x7u3j")
theme_override_font_sizes/font_size = 30
text = "Knight"

[node name="Wizzard_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_x7u3j")
theme_override_font_sizes/font_size = 30
text = "Wizzard"

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_x7u3j")
theme_override_font_sizes/font_size = 30
text = "Start Game"
